@@ -1,3 +1,4 @@
 ## Process this file with automake to produce Makefile.in
 
-SUBDIRS = MH maildir
+SUBDIRS = mbox 
+# MH maildir
